--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
           />
           <br />
           <br />
-          <label for="dob" class="block text-md mb-1">Date of Birth</label>
+          <label for="dob" class="block text-md mb-1">Dob</label>
           <input
             type="date"
             id="dob"
@@ -57,7 +57,7 @@
           <br />
           <br />
           <input type="checkbox" id="acceptTerms" name="acceptTerms" />
-          <label for="acceptTerms">Accept Terms & Conditions</label>
+          <label for="acceptTerms">Accepted terms?</label>
           <br />
           <br />
           <button
